src/objects/Lab__c.object
<CustomObject>
    <fields>
        <fullName>ADT_Integration__c</fullName>
        <formula>TEXT( Account_Name__r.ADT_Integration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADT Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_VF__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SJM Customer, Prospective</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Labs</relationshipLabel>
        <relationshipName>Labs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Account_Name__r.USD_AF_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVIS_System__c</fullName>
        <formula>Account_Name__r.CVIS_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CVIS System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Report_to_EMR_Integration__c</fullName>
        <formula>TEXT( Account_Name__r.Case_Report_to_EMR_Integration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Report to EMR Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMR_System__c</fullName>
        <formula>Account_Name__r.EMR_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMR System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Labs</relationshipLabel>
        <relationshipName>Labs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Connectivity__c</fullName>
        <formula>TEXT(Account_Name__r.IT_Connectivity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Connectivity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Name__c</fullName>
        <label>Lab Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACS_Integration__c</fullName>
        <formula>TEXT( Account_Name__r.PACS_Integration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PACS Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACS_System__c</fullName>
        <formula>Account_Name__r.PACS_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PACS System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account_Name__r.USD_AF_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Connect_Use__c</fullName>
        <formula>TEXT( Account_Name__r.Remote_Connect_Use__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remote Connect Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_NAS_Archive__c</fullName>
        <formula>TEXT( Account_Name__r.SAN_NAS_Archive__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAN / NAS Archive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Lab Build</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplies_Used_Report_Integration__c</fullName>
        <formula>TEXT( Account_Name__r.Supplies_Used_Report_Integration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplies Used Report Integration</label>
        <type>Text</type>
    </fields>
    <label>Lab</label>
    <listViews>
        <fullName>All_Labs</fullName>
        <columns>NAME</columns>
        <columns>Lab_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Labs</label>
    </listViews>
    <nameField>
        <displayFormat>LAB-{000000}</displayFormat>
        <label>Lab Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labs</pluralLabel>
    <recordTypes>
        <fullName>EP_Lab</fullName>
        <active>true</active>
        <description>Electro-Physiology Lab</description>
        <label>EP Lab</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>